--- a/test-cdn.html
+++ b/test-cdn.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
-    
+    <img src="https://cdn.jsdelivr.net/gh/VardanMittal/HCR_LAB_CDN/Team.jpg"/>
 </body>
 </html>
